# motor-driver

firmware/: Cargo.toml  display.py
firmware/.cargo/: config.toml
firmware/src/: adc.rs  controller.rs  main.rs  message.rs  motor.rs  qei.rs
