[package]
name = "fw"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
panic-halt = "0.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = "0.3.2"
embedded-graphics = "0.8.1"
sh1106 = "0.5.0"
heapless = "0.8.0"
rtic = {version = "2.1.1", features = ["thumbv7-backend", "rtic-monotonics"]}

[dependencies.stm32g4xx-hal]
git = "https://github.com/stm32-rs/stm32g4xx-hal.git"
branch = "main"
features = ["stm32g431", "rt"]
