[package]
name = "fw"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
panic-halt = "0.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = "0.3.2"
embedded-graphics = "0.8.1"
sh1106 = "0.5.0"
heapless = "0.8.0"
rtic = {version = "2.1.1", features = ["thumbv7-backend", "rtic-monotonics"]}
pid = "4.0.0"
num-traits = {version = "0.2", default-features = false}
stm32-usbd = {version = "0.7", optional = true}
usb-device = { version = "0.3.2", features = ["defmt"] }
usbd-serial = "0.2.2"
rotary-encoder-hal = "0.5.0"
rtic-sync = "1.3.0"
rtic-monotonics = {version = "2.0.2", features = ["cortex-m-systick"]}
micromath = "2.1.0"

[dependencies.stm32g4xx-hal]
git = "https://github.com/umi-eng/stm32g4xx-hal.git"
branch = "feature/usb"
features = ["stm32g431", "rt", "usb"]

[profile.dev]
codegen-units = 1
debug = 2
lto = true
opt-level = 1

[profile.dev.package."*"]
opt-level = "z"
